Removed unnecessary video

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -530,9 +530,9 @@
     "# Define the Hough transform parameters\n",
     "rho = 1 # distance resolution in pixels of the Hough grid\n",
     "theta = np.pi/180 # angular resolution in radians of the Hough grid\n",
-    "threshold = 4    # minimum number of votes (intersections in Hough grid cell) 1\n",
-    "min_line_length = 25 #minimum number of pixels making up a line   8\n",
-    "max_line_gap = 10   # maximum gap in pixels between connectable line segments  4\n",
+    "threshold = 4    # minimum number of votes (intersections in Hough grid cell) \n",
+    "min_line_length = 25 #minimum number of pixels making up a line   \n",
+    "max_line_gap = 10   # maximum gap in pixels between connectable line segments  \n",
     "\n",
     "indir = \"test_images/\"\n",
     "outdir = \"test_images_output/\"\n",
@@ -897,50 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MoviePy] >>>> Building video test_videos_output/solidYellowLeft_segments.mp4\n",
-      "[MoviePy] Writing video test_videos_output/solidYellowLeft_segments.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████▉| 681/682 [00:11<00:00, 60.62it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft_segments.mp4 \n",
-      "\n",
-      "Wall time: 11.8 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "yellow_output = 'test_videos_output/solidYellowLeft_segments.mp4'\n",
-    "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
-    "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
-    "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
-    "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "##clip2 = VideoFileClip('test_videos/solidYellowLeft.mp4').subclip(0,5)\n",
-    "clip2 = VideoFileClip('test_videos/solidYellowLeft.mp4')\n",
-    "yellow_clip = clip2.fl_image(process_image)\n",
-    "%time yellow_clip.write_videofile(yellow_output, audio=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -948,14 +905,14 @@
       "text/html": [
        "\n",
        "<video width=\"960\" height=\"540\" controls>\n",
-       "  <source src=\"test_videos_output/solidYellowLeft_segments.mp4\">\n",
+       "  <source src=\"test_videos_output/solidYellowLeft.mp4\">\n",
        "</video>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
